--- a/Client/src/Stylesheets/index.css
+++ b/Client/src/Stylesheets/index.css
@@ -115,12 +115,76 @@
 .bagde{
     margin : 1rem;
     padding: 12px 12px;
+   
 }
 /*center*/
 .center-content {
   margin-left: 22rem;   /* space for left card */
   margin-right: 8rem;   /* space for right icons */
   padding: 4rem;
+}
+
+@media (max-width: 768px) {
+
+  /* MAIN*/
+  .center-content {
+    margin: 0;
+    padding: 2rem 1.25rem;
+  }
+
+  /* left card*/
+  .profile-card {
+    position: static;          
+    width: 100%;
+    height: auto;
+    inset: 2rem;
+    margin: 1rem auto 2rem;
+    border-radius: 1.25rem;
+  }
+
+  /* card text*/
+  .profile-card h2,
+  .profile-card p {
+    text-align: center;
+  }
+
+  /* card img*/
+  .profile-card .image-wrapper{
+    height: 15rem;
+    margin: 1rem;
+  }
+
+  /* main  */
+  .center-content > div {
+    gap: 2rem;
+  }
+
+  /* text*/
+  .center-content h1 {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
+
+  
+  .center-content p {
+    font-size: 1rem;
+  }
+
+  
+  .center-content .flex.gap-3 {
+    flex-wrap: wrap;
+    gap: 0.75rem;
+  }
+
+  .center-content span {
+    font-size: 0.875rem;
+    padding: 0.4rem 0.9rem;
+  }
+
+  /* icons (should be hide) */
+  .fixed.right-6 {
+    display: none;
+  }
 }
 
 
